@@ -267,6 +267,8 @@ public class CommandBuilderTest {
         if (Jvm.current().isModular()) {
             assertArgumentExists(command, "--add-exports=java.desktop/sun.awt=ALL-UNNAMED", expectedCount);
             assertArgumentExists(command, "--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED", expectedCount);
+            assertArgumentExists(command, "--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED", expectedCount);
+            assertArgumentExists(command, "--add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED", expectedCount);
             assertArgumentExists(command, "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED", expectedCount);
             assertArgumentExists(command, "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED", expectedCount);
             assertArgumentExists(command, "--add-opens=java.base/java.io=ALL-UNNAMED", expectedCount);
@@ -281,6 +283,10 @@ public class CommandBuilderTest {
                     command.contains("--add-exports=java.base/sun.awt=ALL-UNNAMED"));
             Assert.assertFalse("Did not expect \"--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED\" to be in the command list",
                     command.contains("--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED"));
+            Assert.assertFalse("Did not expect \"--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED\" to be in the command list",
+                    command.contains("--add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED"));
+            Assert.assertFalse("Did not expect \"--add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED\" to be in the command list",
+                    command.contains("--add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED"));
             Assert.assertFalse("Did not expect \"--add-opens=java.base/java.lang=ALL-UNNAMED\" to be in the command list",
                     command.contains("--add-opens=java.base/java.lang=ALL-UNNAMED"));
             Assert.assertFalse("Did not expect \"--add-opens=java.base/java.lang.invoke=ALL-UNNAMED\" to be in the command list",
